<resources>
    <string name="app_name">My final project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_search_for_recipes">Search for recipes</string>
    <string name="selected_Fragment">Selected</string>
    <string name="fragment_shopping_list">Shopping list</string>
    <string name="fragment_timer">Timer</string>

    //фрагмент с поиском рецептов
    <string name="search_by_keyword">Search by keyword</string>
    <string name="health_labels">Health labels</string>
    <string name="diet_labels">Diet labels</string>
    <string name="calories">Calories</string>
    <string name="cooking_time">Cooking time</string>


    <string name="edit_keyword">Edit keyword</string>
    <string name="add_keyword">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="title_searching_by_keyword">Searching by keyword</string>
    <string name="text_searching_by_keyword">Enter some words</string>
    <string name="title_health_labels">Health labels</string>
    <string name="title_diet_labels">Diet labels</string>

    <string name="search_button">Search</string>
    <string name="number_of_servings">Number of servings</string>
    <string name="energy">Energy</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="carbs">Carbs</string>
    <string name="ingredients">Ingredients</string>
    <string name="button_for_view_recipe">See the full recipe</string>
    <string name="button_back">Back</string>
    <string name="button_add_favourites">Add to favourites</string>

    <string name="edit">Edit</string>
    <string name="kcal">kcal</string>
    <string name="min">min</string>
    <string name="calories_item">Calories</string>
    <string name="enter_calories">Enter calories</string>
    <string name="cooking_time_item">Cooking time</string>

    <string name="button_remove_all_in_shopingList">Remove All</string>
    <string name="list_ingredients">*Click on an ingredient to add it to your shopping list</string>



</resources>